--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "webhook": "",
-  "pass32": "K4ZVUQTSIRMDOWKRGU2WQQTZJM======",
+  "pass32": "DMWLLO5QLEIQN7EW",
   "ratelimit": true,
   "rateLimitTimeout": 30000,
   "port": 3000
